# openlibcli-python-bindings

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: wheels.yml
Docs/: create_a_issue.md
examples/linux/unix_socket/: cli_server_unix_socket.py  cli_transport_unix_socket.py
examples/shared/: cli_demo_setup.py
examples/win_linux/pipe/: cli_server_pipe.py  cli_transport_pipe.py
examples/win_linux/serial/: cli_server_serial.py  cli_transport_serial.py
examples/win_linux/telnet/: cli_server_telnet.py  cli_transport_telnet.py
scripts/: build_shared.bat  build_shared.sh  cli_py_helper.c
src/openlibcli/: __init__.py  _binding.py  session.py  version.py
src/openlibcli/openlibcli_c/: cli.c  cli.h  cli_env_detect.h  cli_py_helper.c  cli_version.h
src/openlibcli/openlibcli_c/config/: cli_config.h  cli_embedded_config.h
src/openlibcli/openlibcli_c/utils/: cli_args_parse.c  cli_args_parse.h
src/openlibcli/transports/: __init__.py
